# MiniEngine

./: CMakeLists.txt  Readme.md  main.cpp
Internal/Core/: App.cpp  App.h  Camera.h  Config.h  Engine.cpp  Engine.h  ImGuiManager.cpp  ImGuiManager.h  Image.cpp  Image.h  Light.h  Material.h  Mesh.h  PresentWindow.cpp  PresentWindow.h  Scene.cpp  Scene.h  Shader.h  Texture.h  TextureLoader.cpp  TextureLoader.h
Internal/Render/: PipelineStateObject.cpp  PipelineStateObject.h  RenderDebug.cpp  RenderDebug.h  RenderInterface.cpp  RenderInterface.h  RenderResHelper.cpp  RenderResHelper.h  RenderResource.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  Texture.h
Internal/Render/Pass/: AmbientOcclusionRenderer.cpp  AmbientOcclusionRenderer.h  BasePass.cpp  BasePass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  GBufferPass.cpp  GBufferPass.h  IDenoisePass.cpp  IDenoisePass.h  PathTracingPass.cpp  PathTracingPass.h  PostProcessPass.cpp  SSAOPass.cpp  SSAOPass.h  ShadowRenderer.cpp  ShadowRenderer.h  ToneMappingPass.cpp  ToneMappingPass.h  VXGIPass.cpp  VXGIPass.h
Internal/Util/: ConfigLoader.cpp  ConfigLoader.h  ModelLoader.cpp  ModelLoader.h  Singleton.h  Timer.h  Types.h
Resource/: Cornell_box.json  Cornell_box_Point_Light.json  Cornell_box_Quad_Light.json  default.json  newsponza.json
Shaders/: BasePass.frag  BasePass.vert  DeferredLighting.comp  GBufferPass.frag  GBufferPass.vert  IrradianceConvolution.frag  PathTracing.frag  PostProcess.vert  SVGFDenoise.frag  ToneMapping.comp  ToneMapping.frag
Shaders/Debug/: TestShader.frag  VisualizeShadowMap.vert  VisualizeVoxel.frag  VisualizeVoxel.geom  VisualizeVoxel.vert
Shaders/Indirect/SSAO/: SSAO.frag  SSAOBlur.frag
Shaders/Indirect/VXGI/: LightInject.comp  VXGIDeferredLighting.comp  VXGIIndirectLighting.comp  VoxelMipmapGenerate.comp  VoxelScene.frag  VoxelScene.geom  VoxelScene.vert
Shaders/Shadow/: CascadeShadow.geom  LayeredShadow.vert  PointShadow.frag  PointShadow.geom  SimpleShadow.vert  VisualizeShadowMap.frag
